Changes to fix profile image sizing

--- a/client/app/dashboard/looking/looking.html
+++ b/client/app/dashboard/looking/looking.html
@@ -15,7 +15,7 @@
               <div class="flipper">
                 <div class="front white-box">
                   <div class="center-image">
-                    <img ng-if="look.relatedUserId.profileImage" ng-src="api/images{{look.relatedUserId.profileImage}}" class="img-circle">
+                    <img ng-if="look.relatedUserId.profileImage" ng-src="api/images{{look.relatedUserId.profileImage}}" class="img-circle center-block looking-grid-profile-img">
                     <i ng-if="!look.relatedUserId.profileImage" class="fa fa-user fa-4x"></i>
                   </div>
                   <h4>{{look.relatedUserId.firstname}} {{look.relatedUserId.lastname}}</h4>
