--- a/client/app/dashboard/looking/looking-details/looking.detail.html
+++ b/client/app/dashboard/looking/looking-details/looking.detail.html
@@ -9,7 +9,7 @@
 
       <div class="white-box">
         <div class="row about-me lookingDetails">
-          <div class="col-xs-12 col-sm-12">
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
             <div class="row">
 
@@ -17,7 +17,7 @@
 
               <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2 col-sm-offset-1 col-md-offset-1 col-lg-offset-1">
                 <div class="picture text-center">
-                  <img ng-if="detail.lookingDetail.relatedUserId.profileImage" ng-src="api/images{{detail.lookingDetail.relatedUserId.profileImage}}" class="img-circle center-block">
+                  <img ng-if="detail.lookingDetail.relatedUserId.profileImage" ng-src="api/images{{detail.lookingDetail.relatedUserId.profileImage}}" class="img-circle center-block looking-profile-img">
                   <i ng-if="!detail.lookingDetail.relatedUserId.profileImage" class="fa fa-user fa-5x"></i>
                 </div>
               </div>
