--- a/client/app/dashboard/my-profile/my.profile.html
+++ b/client/app/dashboard/my-profile/my.profile.html
@@ -11,10 +11,10 @@
       </div>
       <div class="white-box">
         <div class="row about-me">
-          <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+          <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
             <div class="picture">
-              <img ng-if="myProfile.me.profileImage" ng-src="api/images{{myProfile.me.profileImage}}" class="img-circle">
-              <i ng-if="!myProfile.me.profileImage" class="fa fa-user" style="font-size:120px"></i>
+              <img ng-if="myProfile.me.profileImage" ng-src="api/images{{myProfile.me.profileImage}}" class="img-circle center-block looking-profile-img">
+              <i ng-if="!myProfile.me.profileImage" class="fa fa-user fa-5x"></i>
             </div>
           </div>
           <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
@@ -128,7 +128,7 @@
             <div class="row roommate" ng-repeat="roommate in myProfile.roommates">
               <div class="col-xs-2">
                 <div class="picture">
-                  <img ng-if="roommate.relatedRoommateId.profileImage" ng-src="api/images{{roommate.relatedRoommateId.profileImage}}" alt="" class="img-circle">
+                  <img ng-if="roommate.relatedRoommateId.profileImage" ng-src="api/images{{roommate.relatedRoommateId.profileImage}}" alt="" class="img-circle looking-profile-img">
                   <i ng-if="!roommate.relatedRoommateId.profileImage" class="fa fa-user fa-4x"></i>
                 </div>
               </div>
