--- a/client/app/roomDetail/roomDetail.html
+++ b/client/app/roomDetail/roomDetail.html
@@ -104,7 +104,7 @@
           <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" class="row roomRoommates" ng-repeat="roommate in room.creatorRoommates">
             <div class="col-xs-2 col-sm-4">
               <div class="picture text-center">
-                <img ng-if="roommate.relatedRoommateId.profileImage" ng-src="api/images{{roommate.relatedRoommateId.profileImage}}" alt="" class="img-circle">
+                <img ng-if="roommate.relatedRoommateId.profileImage" ng-src="api/images{{roommate.relatedRoommateId.profileImage}}" alt="" class="img-circle center-block looking-profile-img">
                 <i ng-if="!roommate.relatedRoommateId.profileImage" class="fa fa-user fa-3x"></i>
               </div>
             </div>
