CSS and wording changes based on student input

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -68,7 +68,7 @@
 
           <!-- Looking -->
 
-          <h2 class="section-title"> Looking </h2>
+          <h2 class="section-title">Looking for a Room</h2>
           <div class="white-box looking-for-room" >
             <h2 ng-if="!dashboard.lookingRoom.length" >
               Currently no one is looking for a room, why dont you be the first?
@@ -110,7 +110,7 @@
           <!-- My Available Rooms Posts - Hides if no Looking posts-->
           <div ng-show="dashboard.myRoomListings.length" class="posts-dashboard-title">
 
-            <h2 class="section-title"> My Posts - Available Rooms</h2>
+            <h2 class="section-title"> My Posts - Available Room</h2>
 
             <div class="white-box my-listings" >
               <h2 ng-if="!dashboard.myRoomListings.length" >
