--- a/client/app/dashboard/looking/looking.html
+++ b/client/app/dashboard/looking/looking.html
@@ -4,7 +4,7 @@
   <div class="container lookings">
     <div class="row col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <div class="page-header">
-        <h2> Looking </h2>
+        <h2>Looking for a Room</h2>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <slick dots="true" class="slider" init-onload="true" data="looking.groups" slides-to-show="1" slides-to-scroll="1" ng-if="looking.lookings.length">
