--- a/client/app/landing/community.html
+++ b/client/app/landing/community.html
@@ -11,24 +11,24 @@
     <div class="marketing mkt-info">
 
       <div class="row featurette">
-        <div class="col-sm-7">
+        <div class="col-sm-7 col-xs-12 col-md-7 col-lg-7">
           <h2 class="featurette-heading">Walk to and from campus. <span class="text-muted">Safely.</span></h2>
           <ul class="icon-list">
             <li><img class="icons" src="./assets/images/mini-icons/steps.svg" />Connect and walk home safely with other students around you</li>
           </ul>
         </div>
-        <div class="col-sm-5">
-          <img class="img-responsive center-block img-circle circular" src="./assets/images/community/students-walking-safely.jpg" alt="WalkSafely">
+        <div class="col-sm-5 col-xs-12 col-md-5 col-lg-5">
+          <img class="img-responsive center-block img-circle circular roommatesPicture" src="./assets/images/community/students-walking-safely.jpg" alt="WalkSafely">
         </div>
       </div>
 
       <hr class="featurette-divider">
 
       <div class="row featurette">
-        <div class="col-sm-5">
-          <img class="img-responsive center-block img-circle circular" src="./assets/images/community/carpool.jpg" alt="Carpool">
+        <div class="col-sm-5 col-xs-12 col-md-5 col-lg-5">
+          <img class="img-responsive center-block img-circle circular roommatesPicture" src="./assets/images/community/carpool.jpg" alt="Carpool">
         </div>
-        <div class="col-sm-7">
+        <div class="col-sm-7 col-xs-12 col-md-7 col-lg-7">
           <h2 class="featurette-heading">Share a ride. <span class="text-muted">Around your schedule.</span></h2>
           <ul class="icon-list">
             <li><img class="icons" src="./assets/images/mini-icons/car.svg" />Who is driving to campus and can you carpool?</li>
@@ -40,7 +40,7 @@
       <hr class="featurette-divider">
 
       <div class="row featurette">
-        <div class="col-sm-7">
+        <div class="col-sm-7 col-xs-12 col-md-7 col-lg-7">
           <h2 class="featurette-heading">Attend university events. <span class="text-muted">Together.</span></h2>
           <ul class="icon-list">
             <li><img class="icons" src="./assets/images/mini-icons/guitar.svg" />Attend on-campus events with other students around you</li>
@@ -48,8 +48,8 @@
             <li><img class="icons" src="./assets/images/mini-icons/calendar5.svg" />Upcoming events notification</li>
           </ul>
         </div>
-        <div class="col-sm-5">
-          <img class="img-responsive center-block img-circle circular" src="./assets/images/community/events.jpg" alt="Carpool">
+        <div class="col-sm-5 col-xs-12 col-md-5 col-lg-5">
+          <img class="img-responsive center-block img-circle circular roommatesPicture" src="./assets/images/community/events.jpg" alt="Carpool">
         </div>
       </div>
     </div> <!-- /END THE FEATURETTES -->
