--- a/client/app/landing/valueicons.html
+++ b/client/app/landing/valueicons.html
@@ -1,18 +1,18 @@
 <!-- Three core value props -->
 <div class="container marketing mkt-icons">
   <div class="row text-center">
-    <div class="col-sm-4">
-      <img class="img-responsive center-block" src="./assets/images/icons/icon-circles.png" alt="Secure" style="width: 170px; height: 69px;">
+    <div class="col-sm-4 col-xs-12 col-md-4 col-lg-4">
+      <i class="fa fa-lock fa-5x"></i>
       <h2>Secure</h2>
     </div><!-- /.col-sm-4 -->
 
-    <div class="col-sm-4">
-      <img class="img-responsive center-block" src="./assets/images/icons/icon-search.png" alt="Off-campus housing" style="width: 98px; height: 69px;">
+    <div class="col-sm-4 col-xs-12 col-md-4 col-lg-4">
+      <i class="fa fa-search-plus fa-5x"></i>
       <h2>Off-campus housing</h2>
     </div><!-- /.col-sm-4 -->
 
-    <div class="col-sm-4">
-      <img class="img-responsive center-block" src="./assets/images/icons/icon-community.png" alt="Community" style="width: 74px; height: 69px;">
+    <div class="col-sm-4 col-xs-12 col-md-4 col-lg-4">
+      <i class="fa fa-users fa-5x"></i>
       <h2>Community</h2>
     </div><!-- /.col-sm-4 -->
   </div><!-- /.row -->
