--- a/client/app/landing/corefeatures.html
+++ b/client/app/landing/corefeatures.html
@@ -2,7 +2,7 @@
 <div class="container marketing mkt-info">
 
   <div class="row featurette">
-    <div class="col-sm-7">
+    <div class="col-sm-7 col-xs-12 col-md-7 col-lg-7">
       <h2 class="featurette-heading">Verified students. <span class="text-muted">At your university.</span></h2>
       <ul class="icon-list">
         <li><img class="icons" src="./../assets/images/mini-icons/edu.svg" /> Sign-up requires valid university email</li>
@@ -10,18 +10,18 @@
         <li><img class="icons" src="./../assets/images/mini-icons/cloud.svg" />Data is stored securely on Amazon Cloud</li>
       </ul>
     </div>
-    <div class="col-sm-5">
-      <img class="img-responsive center-block square" src="./../assets/images/values/roommates.jpg" alt="Roommates">
+    <div class="col-sm-5 col-xs-12 col-md-5 col-lg-5">
+      <img class="img-responsive center-block square roommatesPicture" src="./../assets/images/values/roommates.png" alt="Roommates">
     </div>
   </div>
 
   <hr class="featurette-divider">
 
   <div class="row featurette">
-    <div class="col-sm-5">
-      <img class="img-responsive center-block square" src="./../assets/images/values/roommatesv2.jpg" alt="Rooms">
+    <div class="col-sm-5 col-xs-12 col-md-5 col-lg-5">
+      <img class="img-responsive center-block square roommatesPicture" src="./../assets/images/values/roomDetail.png" alt="Rooms">
     </div>
-    <div class="col-sm-7">
+    <div class="col-sm-7 col-xs-12 col-md-7 col-lg-7">
       <h2 class="featurette-heading">Search available rooms. <span class="text-muted">Look for roommates.</span></h2>
       <ul class="icon-list">
         <li><img class="icons" src="./../assets/images/mini-icons/bus.svg" />Commute times to your university</li>
@@ -42,7 +42,7 @@
   <hr class="featurette-divider">
 
   <div class="row featurette">
-    <div class="col-sm-7">
+    <div class="col-sm-7 col-xs-12 col-md-7 col-lg-7">
       <h2 class="featurette-heading">Connect with other students. <span class="text-muted">Around you.</span><sup style="font-size: 40%; top: -1em;">(Coming Soon)</sup></h2>
       <ul class="icon-list">
         <li><img class="icons" src="./../assets/images/mini-icons/bubbles4.svg" /> Meet new students around you
@@ -51,11 +51,11 @@
           </ul>
         </li>
         <li><img class="icons" src="./../assets/images/mini-icons/bubble-heart.svg" />Learn about your area and safe neighborhoods</li>
-        <li><img class="icons" src="./../assets/images/mini-icons/smiley2.svg" />Get the most of living off-campus</li>
+        <li><img class="icons" src="./../assets/images/mini-icons/smiley2.svg" />Get the most out of living off-campus</li>
       </ul>
     </div>
-    <div class="col-sm-5">
-      <img class="img-responsive center-block square" src="./../assets/images/values/heatmap.png" alt="Heatmap">
+    <div class="col-sm-5 col-xs-12 col-md-5 col-lg-5">
+      <img class="img-responsive center-block square roommatesPicture" src="./../assets/images/values/heatmap.png" alt="Heatmap">
     </div>
   </div>
 </div> <!-- /END THE FEATURETTES -->
