--- a/client/app/dashboard/my-profile/edit-profile/edit.profile.html
+++ b/client/app/dashboard/my-profile/edit-profile/edit.profile.html
@@ -1,6 +1,6 @@
 <div ng-include="'components/layout/navbar/navbar.html'"></div>
 <div ng-include="'components/layout/navbar/sub-navbar.html'"></div>
-<div class="main-wrapper">
+<div class="main-wrapper" cg-busy="{promise:editProfile.busy, message:'Loading your profile... Please wait'}">
 <div class="container edit-profile">
   <div class="page-header">
     <h2> Personal </h2>
