#233fix-Changed date format to US date format (mm/dd/yyyy) on front end

--- a/client/app/account/settings/address/addresses.html
+++ b/client/app/account/settings/address/addresses.html
@@ -26,8 +26,8 @@
     <td>{{item.city}}</td>
     <td>{{item.state}}</td>
     <td>{{item.zip}}</td>
-    <td>{{item.startDate | date: 'dd.MM.yyyy'}}</td>
-    <td>{{item.endDate | date: 'dd.MM.yyyy'}}</td>
+    <td>{{item.startDate | date: 'MM/dd/yyyy'}}</td>
+    <td>{{item.endDate | date: 'MM/dd/yyyy'}}</td>
     <td>{{item.present}}</td>
     <td>
       <div class="btnContainter ">
