Cosmetic changes. New CSS class for Safari icon issue.

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -149,7 +149,7 @@
 
                     <div class="col-xs-2 col-sm-1 col-md-1 col-lg-1 col-xs-offset-4 col-sm-offset-2 col-md-offset-2 col-lg-offset-2">
                       <div class="edit">
-                        <a class="bubble pull-left" ui-sref="editRoom({id:room.id})" ui-sref-opts="{reload:true}">
+                        <a class="new-bubble pull-left" ui-sref="editRoom({id:room.id})" ui-sref-opts="{reload:true}">
                           <i class="fa fa-pencil"></i>
                         </a>
                       </div>
@@ -197,7 +197,7 @@
 
                     <div class="col-xs-2 col-sm-1 col-md-1 col-lg-1 col-xs-offset-4 col-sm-offset-5 col-md-offset-5 col-lg-offset-5">
                       <div class="edit">
-                        <a class="bubble pull-right" ui-sref="editLooking({id:look.id})" ui-sref-opts="{reload:true}">
+                        <a class="new-bubble pull-right" ui-sref="editLooking({id:look.id})" ui-sref-opts="{reload:true}">
                           <i class="fa fa-pencil"></i>
                         </a>
                       </div>
