--- a/client/app/landing/jumbotron.html
+++ b/client/app/landing/jumbotron.html
@@ -8,14 +8,14 @@
         <h1>An easy way to live and connect with students off-campus</h1>
       </div>
     </div>
-    <div class="row  text-center lead-img">
+    <div class="row text-center lead-img">
       <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
         <img class="img-responsive center-block" src="./assets/images/jumbotron/rented-HomepageGraph.png" />
       </div>
     </div>
     <div class="row  text-center lead-btn">
       <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
-        <p><a class="btn btn-rented-large primary" ui-sref="signup" role="button">Get Started For Free</a></p>
+        <a class="btn btn-rented-large primary" ui-sref="signup" role="button">Get Started For Free</a>
       </div>
     </div>
 
