--- a/client/app/dashboard/looking/looking-details/looking.detail.html
+++ b/client/app/dashboard/looking/looking-details/looking.detail.html
@@ -68,7 +68,7 @@
         <hr/>
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <a class="contact-bubble-email pull-right" ng-href="mailto:{{detail.lookingDetail.relatedUserId.email}}?Subject=Interested%20in%20your%20looking" target="_top"><i class="fa fa-send fa-lg"></i></a>
+            <a class="contact-bubble-email pull-right" ng-href="mailto:{{detail.lookingDetail.relatedUserId.email}}?Subject=Interested%20in%20your%20looking" target="_top"><i class="fa fa-send fa-lg"></i><p>Email</p></a>
           </div>
         </div>
       </div>
