--- a/client/app/roomDetail/roomDetail.html
+++ b/client/app/roomDetail/roomDetail.html
@@ -34,23 +34,27 @@
               <!-- call google maps api to get distance from students address to students university of record .. walking, bus, driving -->
 
               <p>
-                <span class="distance"> <i class="fa fa-marker"></i>Miles from {{room.education.relatedUniversityId.name}}</span>
+
+                <!-- TODO insert real distance from university -->
+
+                <span class="distance"> <i class="fa fa-map-marker"></i>&nbsp;&nbsp;10 miles from {{room.education.relatedUniversityId.name}}</span>
                 <br><br>
               </p>
 
               <a class="distance-bubble">
-                <i class="fa fa-car"></i>
-                <span>{{room.distance.DRIVING}}</span>
-              </a>
-
-              <a href="" class="distance-bubble">
-                <i class="fa fa-bicycle"></i>
-                <span>{{room.distance.BICYCLING}}</span>
+                <i class="fa fa-car fa-lg"></i>
+                <!--<span><br>{{room.distance.DRIVING}}</span>-->
+                <span><br>3d 2h 4m</span> <!-- Example TODO remove example -->
               </a>
 
               <a class="distance-bubble">
-                <i class="fa fa-child"></i>
-                <span>{{room.distance.WALKING}}</span>
+                <i class="fa fa-bicycle fa-lg"></i>
+                <span><br>{{room.distance.BICYCLING}}</span>
+              </a>
+
+              <a class="distance-bubble">
+                <i class="fa fa-child fa-lg"></i>
+                <span><br>{{room.distance.WALKING}}</span>
               </a>
 
             </div>
@@ -85,7 +89,7 @@
 
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-            <a class="contact-bubble-email pull-right" ng-href="mailto:{{room.creatorEmail}}?Subject=Interested%20in%20your%20room" target="_top"><i class="fa fa-send fa-lg"></i></a>
+            <a class="contact-bubble-email pull-right" ng-href="mailto:{{room.creatorEmail}}?Subject=Interested%20in%20your%20room" target="_top"><i class="fa fa-send fa-lg"></i><p>Email</p></a>
 
             <!--<a class="contact-bubble-email" href="" target="_top"><i class="fa fa-facebook fa-lg"></i></a>-->
             <!-- Facebook link commented out for now -->
