removed vinit hardcoded values

--- a/client/app/roomDetail/roomDetail.html
+++ b/client/app/roomDetail/roomDetail.html
@@ -44,7 +44,7 @@
               <a class="distance-bubble">
                 <i class="fa fa-car fa-lg"></i>
                 <!--<span><br>{{room.distance.DRIVING}}</span>-->
-                <span><br>3d 2h 4m</span> <!-- Example TODO remove example -->
+                <span><br>{{room.distance.DRIVING}}</span> <!-- Example TODO remove example -->
               </a>
 
               <a class="distance-bubble">
